; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_util.c_disable_coredumps.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_util.c_disable_coredumps.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [30 x i8] c"/proc/sys/kernel/core_pattern\00", align 1
@.str.1 = private unnamed_addr constant [12 x i8] c"|/bin/false\00", align 1
@WRITE_STRING_FILE_DISABLE_BUFFER = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [43 x i8] c"Failed to turn off coredumps, ignoring: %m\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @disable_coredumps() #0 {
  %1 = alloca i32, align 4
  %2 = call i64 (...) @detect_container()
  %3 = icmp sgt i64 %2, 0
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  br label %13

5:                                                ; preds = %0
  %6 = load i32, i32* @WRITE_STRING_FILE_DISABLE_BUFFER, align 4
  %7 = call i32 @write_string_file(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0), i32 %6)
  store i32 %7, i32* %1, align 4
  %8 = load i32, i32* %1, align 4
  %9 = icmp slt i32 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %5
  %11 = load i32, i32* %1, align 4
  %12 = call i32 @log_debug_errno(i32 %11, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.2, i64 0, i64 0))
  br label %13

13:                                               ; preds = %4, %10, %5
  ret void
}

declare dso_local i64 @detect_container(...) #1

declare dso_local i32 @write_string_file(i8*, i8*, i32) #1

declare dso_local i32 @log_debug_errno(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
